Fix word-wrapping on inline code

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,6 @@
 
 body {
     -webkit-font-smoothing: antialiased;
-
     --pink: rgb(255, 167, 196);
     --bg: #282c35;
     --header: #ffffff;
@@ -16,7 +15,6 @@ body {
     --inlineCode-bg: hsl(222, 14%, 25%);
     --inlineCode-text: #e6e6e6;
     --white: #fff;
-
     background-color: var(--bg);
     color: var(--white);
     font-family: 'IBM Plex Mono';
@@ -31,11 +29,18 @@ a {
     color: var(--textLink);
 }
 
-a:active, a:visited, a:hover {
+a:active,
+a:visited,
+a:hover {
     text-decoration: underline;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Press Start 2P'
 }
 
@@ -43,30 +48,26 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: 7rem;
 }
 
-
-@media only screen  and (min-width: 300px) and (max-width: 600px) {
-
+@media only screen and (min-width: 300px) and (max-width: 600px) {
     .blog-name {
         font-size: 20px !important;
     }
-
     .bio-description {
         margin-right: 0;
     }
-
     .blog-container {
         margin-left: auto;
         margin-right: auto;
         max-width: 58rem;
         padding: 2.015rem 2rem !important;
-
     }
-
 }
+
 
 /*
 RTL layout
 */
+
 body:lang(fa) article,
 body:lang(ar) article {
     direction: rtl;
@@ -81,7 +82,9 @@ body:lang(ar) .language-text {
     direction: ltr;
 }
 
+
 /* Fixing parentheses issue in text */
+
 body:lang(fa) .language-text,
 body:lang(ar) .language-text {
     display: inline-block;
@@ -97,13 +100,17 @@ body:lang(ar) blockquote {
     margin-right: -1.75rem;
 }
 
+
 /* styles for Persian language */
+
 body:lang(fa) article,
 body:lang(fa) header>h1 {
     font-family: 'Press Start 2P';
 }
 
+
 /* styles for Arabic language */
+
 body:lang(ar) article,
 body:lang(ar) header>h1 {
     font-family: 'Press Start 2P', sans-serif;
@@ -114,9 +121,11 @@ body:lang(ko) article {
     word-break: keep-all;
 }
 
+
 /**
 * Based on copypasta from Remy Bach and Sarah Drasner
 */
+
 code[class*='language-'],
 pre[class*='language-'] {
     color: white;
@@ -130,11 +139,9 @@ pre[class*='language-'] {
     word-wrap: normal;
     line-height: 1.5;
     margin-bottom: 0;
-
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
-
     -webkit-hyphens: none;
     -moz-hyphens: none;
     -ms-hyphens: none;
@@ -144,7 +151,9 @@ pre[class*='language-'] {
     font-size: 15px;
 }
 
+
 /* Code blocks */
+
 pre[class*='language-'] {
     overflow: auto;
     padding: 1.3125rem;
@@ -160,7 +169,9 @@ pre[class*='language-']::selection {
     background: hsl(207, 4%, 16%);
 }
 
+
 /* Text Selection colour */
+
 pre[class*='language-']::-moz-selection,
 pre[class*='language-'] ::-moz-selection {
     text-shadow: none;
@@ -173,13 +184,21 @@ pre[class*='language-'] ::selection {
     background: hsla(0, 0%, 100%, 0.15);
 }
 
+
 /* Inline code */
+
 :not(pre)>code[class*='language-'] {
     border-radius: 0.3em;
     background: var(--inlineCode-bg);
     color: var(--inlineCode-text);
     padding: 0.15em 0.2em 0.05em;
     white-space: normal;
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 .token.attr-name {
@@ -248,15 +267,12 @@ pre[data-line] {
     position: relative;
 }
 
-
 @media only screen and (max-width: 930px) {
-
     .gatsby-highlight {
         border-radius: 0px !important;
         margin-left: -2rem !important;
         margin-right: -2rem !important;
     }
-
 }
 
 .gatsby-highlight-code-line {
@@ -291,7 +307,9 @@ pre[data-line] {
     min-width: 100%;
 }
 
+
 /* TYPOGRAPHY THINGS*/
+
 code:not(pre) {
     font-family: "Share Tech Mono";
     background-color: var(--pink);
